--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "less": "^2.7.2",
+    "less-loader": "^3.0.0",
+    "less-plugin-clean-css": "^1.5.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.1.0",
-    "node-sass": "^4.11.0",
-    "npm": "^6.0.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1"
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "npm": "^6.0.1"
